Move the Metal strided layout by value, and scope the collector rule to CUDA
The Apple half of the launch-pipeline round, measured on the M4 Max rather than
reasoned about from the GB10's numbers.

The layout the strided kernels index out of was a pooled slab per call -- 4 KB
(MIN_SLAB_BYTES) for 96 to 256 bytes of ints. Counted first, because the copy
into it was never the problem here: writing a shared slab's contents is a memcpy
on unified memory that orders behind nothing. It is 724 acquisitions a training
step at the book's shapes and 55 at the notebook's width, a sixth of everything
the pool serves either way, so it moves into the parameter block by
setBytes:length:atIndex: at the index the buffer was bound at; the four call
sites lose their layout slot, and the same counters read 3720 and 291. The rank
ceiling is now Gpu's own constant on both backends rather than a 64 spelled out
in CudaGemm.

Worth no measurable time -- 0.106 -> 0.107 s a step at the notebook's width,
8.50 -> 8.57 at the book's, both inside a 2% spread, and the per-call floor
unmoved at every size -- because the smallest call the tier takes here is a
memory pass over 2^18 elements. It is worth the count: 724 fewer pool
acquisitions a step, and one class of slab that a per-slab fence will never have
to cover, since a layout that never touches the pool cannot be recycled under a
command buffer that still reads it. Every output byte-identical between the two
builds at both shapes.

The collector question asked again here answers differently, and the guides were
stating CUDA's answer without a device qualifier. On this backend the library
never asks for a collection at all -- the request is gated on the LRU having only
dirty copies left, and eagerly the one resident array is a GEMV matrix, held
clean -- so System.gc() appears zero times in every configuration at both shapes,
-XX:+DisableExplicitGC costs nothing rather than 4.5x, and the flags the README
prints for chapter 3 are 13% slower than 